...

import Foundation


class StarCellView: RootCellView {

    var ratingControl: RatingControl
    var starModel: StarFieldModel!

    override init(style: UITableViewCellStyle, reuseIdentifier: String?) {
        ratingControl = RatingControl()
        ratingControl.mode = .rating
        ratingControl.maxValue = 5
...
