...
        let content: String = readFileContent()
        let coverage = parseCoverage(fromString: content)
        coverageFormatted = String(format: "%.2f", coverage)
        print("Coverage Percentage : \(coverageFormatted)%")

        let urlString = makeStatusUri()
        send(url: urlString) { res in
            print(res)
        }
    }

    func readFileContent() -> String {
        let file = "/xml_report/cobertura.xml"
...
