...
    var customVars: [String: Any]?
    var delegate: FormViewControllerDelegate?
    fileprivate var results: [FeedbackResult] = []

    lazy var leftNavItem: UIBarButtonItem = {
        let navLeft = UIBarButtonItem(title: "", style: UIBarButtonItemStyle.plain, target: self, action: #selector(leftBarButtonPressed(_:)))
        navLeft.accessibilityLabel = "Cancel"
        return navLeft
    }()
    lazy var rightNavItem: UIBarButtonItem = {
        let navRight = UIBarButtonItem(title: "", style: UIBarButtonItemStyle.plain, target: self, action: #selector(rightBarButtonPressed(_:)))
        navRight.accessibilityLabel = "Next"
        return navRight
...
